--- a/_posts/2020-06-15-ds_array.md
+++ b/_posts/2020-06-15-ds_array.md
@@ -29,9 +29,7 @@ x = ['a', 'b', 'd', 'e', 'f']
 
 <img src="https://user-images.githubusercontent.com/45377884/89652554-95857400-d900-11ea-9e8a-30b1f50cc9ec.png" alt="array1" style="zoom:67%;" />
 
-위에서 등장한 배열 `x` 에서 선형 탐색 알고리즘을 통해 `'c'` 와 `'d'` 를 찾는 과정을 생각해봅시다. 먼저 `'c'` 를 찾는 과정입니다. 우리는 `'c'` 가 없다는 것을 한눈에 알 수 있지만 컴퓨터는 한 번에 하나의 요소밖에 보지 못하므로 순차적으로 매 인덱스에 위치한 요소값을 확인하여 비교하여야 합니다. 알고리즘은 `True` 가 나올 때까지 진행되므로 
-
-위에서 등장한 `x` 에서 반복문을 통해 `'c'` 와 `'d'` 를 찾는다고 하자. `'c'` 를 탐색할 경우처럼 배열 내에 요소가 없을 때는 요소의 개수(N)만큼 검색을 하게 되고, `'d' `를 탐색할 경우처럼 배열 내에 요소가 있을 경우 그 인덱스까지만(최대 N회) 검색을 하게된다.
+위에서 등장한 배열 `x` 에서 선형 탐색 알고리즘을 통해 `'c'` 와 `'d'` 를 찾는 과정을 생각해봅시다. 먼저 `'c'` 를 찾는 과정입니다. 우리는 `'c'` 가 없다는 것을 한눈에 알 수 있지만 컴퓨터는 한 번에 하나의 요소밖에 보지 못하므로 순차적으로 매 인덱스에 위치한 요소값을 확인하여 비교하여야 합니다. 알고리즘은 `True` 가 나올 때까지 진행되므로 배열 내에 없는 요소를 찾을 때는 모든 요소를 비교해야 합니다. 그렇기 때문에 배열의 길이인 $N$ 번의 Operation을 수행합니다. 이번에는 배열 안에 있는 `'d'` 를 찾는 과정입니다. `'c'` 를 찾을 때와 같은 작업을 계속 반복하다가 해당 요소를 발견하면 종료합니다. 그렇기 때문에 찾고자 하는 값이 첫 번째로 있는 인덱스 (최대 $N$ 번)의 Operation을 수행하게 됩니다. 
 
 
 
@@ -94,8 +92,8 @@ x = y
 
 
 
-## 문제점
+## 배열의 문제점
 
-위에서 본 것처럼 배열 속 요소를 탐색하거나 새로운 요소를 삽입, 기존 요소를 삭제하는 절차를 위해서는 최대 N번의 Operation이 필요하다. 배열 내에 수 개의 요소만 있을 경우에는 크게 상관이 없지만 N이 매우 커져 1,000,000개의 요소가 있는 배열이 있다면 하나를 삽입하거나, 삭제하는 데에만도 꽤 오랜 시간이 걸릴 것이다.
+지금까지 알아본 것처럼 배열 속 요소를 탐색하는 과정 뿐만 아니라 새로운 요소를 삽입, 기존 요소를 삭제하는 작업을 위해서는 최대 $N$ 번의 Operation이 필요합니다. 배열 내에 수 개의 요소만 있을 경우에는 큰 상관이 없지만 배열의 크기 $N$ 이 $1,000,000$ 이상으로 매우 커지게 되면 삽입이나 삭제 과정에 그만큼의 Operation이 필요하므로 꽤 오랜 시간을 소모하게 될 것입니다. 선형 구조로 되어있는 배열은 삽입과 삭제에 불리합니다. 선형 구조에서는 크기가 $N$ 인 배열에 삽입 혹은 삭제를 수행하여 크기를 $N+1, N-1$ 로 만들 경우 모든 배열의 자리(인덱스)를 지정해 주어야 하기 때문입니다.
 
-삽입을 하는 경우 일정 요소들을 뒤로 이동시키지 않고도 공간을 자동으로 만들어 주는 방법이 있다면 어떨까? 이런 방법은 선형 구조인 배열(Array)에서는 절대 불가능할 것이다. 선형이 아닌 공간에서 이런 방법을 가능케 하는 새로운 데이터 핸들링 방식이 있는데 이를 Linked List라고 한다.
+이런 문제를 개선하기 위해서는 선형 구조를 벗어나 새로운 자료구조의 세계로 들어가야 합니다. 이 자료구조에서는 삽입과 삭제를 오직 한 번의 Operation 만으로 수행할 수 있습니다. 그 자료구조가 바로 다음에 나올 [연결 리스트(Linked List)](https://yngie-c.github.io/data structure/2020/06/21/linked_list/) 입니다.
