--- a/_posts/2020-02-18-LA2.md
+++ b/_posts/2020-02-18-LA2.md
@@ -14,12 +14,14 @@ tag: Linear-Algebra
 이번 시간에는 선형 연립방정식의 해를 구하는 **가우스 소거법(Gaussian elimination)**에 대해서 알아보겠습니다. 사실 가우스 소거법을 몰라도 연립방정식의 해는 구할 수 있습니다. 가장 간단한 형태의 연립방정식을 예로 들어보겠습니다.
 
 
+
 $$
 \begin{cases}\begin{aligned}
 x + 2y = 3 \qquad \cdots \enclose{circle}{1}\\
 4x + 5y = 6 \qquad\cdots \enclose{circle}{2}
 \end{aligned}\end{cases}
 $$
+
 
 
 위 식에서 $x, y$의 해는 중등 과정에서 배운 가감법과 대입법을 통해서도 구할 수 있습니다. 가감법을 사용하려면 $\enclose{circle}{1} \times 4 - \enclose{circle}{2}$ 를 해주어 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다. 대입법을 사용하려면 식 $\enclose{circle}{1}$ 을 $x = 3-2y$ 처럼 한 문자에 대하여 정리한 뒤에 $\enclose{circle}{2}$ 에 식을 대입하여 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다.
@@ -29,9 +31,11 @@ $$
 그래서 선형대수학에서는 다른 관점으로 연립방정식을 바라봅니다. 이 방식은 다음과 같습니다. 먼저, 미지수의 계수에 해당하는 열벡터를 만들어 이를 미지수만큼 스칼라곱하여 더합니다. 이 때, 등호 오른쪽 열벡터까지 다다르는 미지수의 조합을 찾습니다. 위에서 사용했던 예시를 벡터를 사용하여 나타내면 이렇게 바꾸어 볼 수 있습니다.
 
 
+
 $$
 \left[\begin{array}{c} 1 \\ 4 \end{array} \right]x + \left[\begin{array}{c} 2 \\ 5 \end{array} \right]y = \left[\begin{array}{c} 3 \\ 6 \end{array} \right]
 $$
+
 
 
 즉 벡터 $(1,4)^T$와 $(2,5)^T$를 각각 $x,y$ 배 해주어 곱합니다. 물론 이 방법도 벡터의 차원수가 높아지면 상상하기 어려운 것은 매한가지이지만, 만나는 부분을 찾는 것은 아니기에 조금 더 상상하기 쉽습니다. 그렇기 때문에 고차원의 벡터를 다루는 선형대수학에서는 보다 해의 의미를 찾기 쉬운 아래의 관점을 사용합니다.
@@ -64,6 +68,7 @@ $$
 가우스 소거법은 가장 왼쪽 행렬을 **상삼각행렬(Uppert triangular matrix, $U$)로** 만드는 과정부터 시작합니다. 상삼각 행렬이란 행렬의 대각 성분(Diagonal elements)을 기준으로 왼쪽 아래 성분이 모두 $0$ 인 행렬입니다. 상삼각행렬을 만드는 방법은 가감법을 사용하여 연립방정식을 푸는 방법과 유사합니다. $\enclose{circle}{1}$ 번째 행에 적절한 수를 곱한 뒤 나머지 각 행과 더하거나 빼주어 각 1열의 성분을 0으로 만듭니다. 위 식에서는 $\enclose{circle}{1}$ 번째 행을 2배 해준 뒤에 $\enclose{circle}{2}$ 번째 행에서 이를 빼줌으로써 1열의 성분을 0으로 만들 수 있습니다. 마찬가지로 $\enclose{circle}{1}$ 번째 행에서 $\enclose{circle}{3}$ 번째 행을 더해주어 3행 1열의 성분도 0으로 만들 수 있습니다. 이 계산을 수행하면 아래와 같은 결과가 나오게 됩니다.
 
 
+
 $$
 \left[\begin{array}{ccc} 2 & 1 & 1 \\ 0 & -8 & -2 \\ 0 & 8 & 3 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{c} 5 \\ -12 \\ 14 \end{array} \right]
 $$
@@ -84,43 +89,56 @@ $$
 
 ## LU Factorization (Decomposition)
 
-**LU분해법(LU Factorization, LU Decomposition)**은 가우스 소거법을 사용하여 특정한 행렬을 하삼각 행렬과 상삼각 행렬의 곱으로 분해하는 방법입니다. 위에서 가우스 소거를 했던 예시를 통해 LU분해법에 대해 알아보겠습니다. LU 분해법은 이름에서도 유추할 수 있듯, **특정한 행렬을 하삼각행렬(Lower triangular matrix, $L$)**과 상삼각행렬의 곱으로 분해하는 것입니다. 
+**LU분해법(LU Factorization, LU Decomposition)**은 가우스 소거법을 사용하여 특정한 행렬을 하삼각 행렬과 상삼각 행렬의 곱으로 분해하는 방법입니다. 위에서 가우스 소거를 했던 예시를 통해 LU분해법에 대해 알아보겠습니다. LU 분해법은 이름에서도 유추할 수 있듯, **특정한 행렬을 하삼각행렬(Lower triangular matrix, $L$)**과 상삼각행렬의 곱으로 분해하는 것입니다. 위에서 사용했던 예시를 가져와서 이 행렬이 어떻게 분해되는지를 알아보겠습니다. 처음의 행렬은 다음과 같았습니다.
 
-
-
-특정 행렬을 하삼각행렬과 상삼각행렬의 곱으로 변환하는 것이다. 위에서 보았던 가우스 소거법을 활용하면 LU분해를 할 수 있다. 위에서 가우스 소거를 했던 예시를 통해 LU분해법에 대해 알아보자.
 
 $$
 \left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]
-\quad \Rightarrow \quad
-\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
 $$
 
 
-위 과정은 우리가 첫 번째로 했던 1열의 성분을 0으로 만드는 과정을 행렬의 곱으로 나타낸 것이다. 화살표를 기준으로 오른 쪽 행렬의 곱셈을 진행하면 자연스럽게 그 과정이 진행된다. 물론 행렬곱의 결과는 첫 번째 과정에서 구했던 행렬과 같아진다. 기본적으로 하삼각행렬의 대각 성분은 1로 고정되며 첫 번째 식에 얼마를 곱해주고 더해주는지(혹은 빼주는지)에 대해 하삼각행렬의 첫 번째 성분이 정해진다. 위에서 두 번째식에 2를 곱해준 뒤 빼주었기 때문에 하삼각행렬의 2행 1열의 성분은 -2이고, 세 번째 식은 곱셈없이 더해주었기 때문에 1이 된다. 이번에는 두 번째(2열의 성분을 0으로 만드는) 과정을 행렬식으로 표현해보자.
+가우스 소거법에서 $\enclose{circle}{1}$ 번째 행을 제외한 행의 1열 성분을 모두 0으로 만들기 위해서 $\enclose{circle}{2}$ 번째 행에서 $\enclose{circle}{1}$ 번째 행을 두 배 해준 것을 빼주었고, $\enclose{circle}{3}$ 번째 행에서는 $\enclose{circle}{1}$ 번째 행과 더해주었습니다. 이 과정을 행렬 곱으로 나타내면 아래와 같은 행렬식이 나오게 됩니다.
 
 
 $$
-\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
-\\ \Rightarrow
-\left[\begin{array}{ccc} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 1 & 1 \end{array} \right]
-\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
+\begin{aligned}
+&\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right] \\
+\because &\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right] = \left[\begin{array}{ccc} 2 & 1 & 1 \\ 0 & -8 & -2 \\ 0 & 8 & 3 \end{array} \right]
+\end{aligned}
 $$
 
 
-이 과정도 마찬가지다. 하삼각행렬 대각 성분의 값을 두 번째 식을 곱셈없이 세번째 식과 더했기 때문에 3행 2열의 성분을 1로 하였다. 식이 더 많이 늘어나더라도 위와 같이 가우스 소거의 과정을 하삼각 행렬의 곱으로 나타낼 수 있다. 각 과정에서 나온 하삼각행렬을 각각 $L_1, L_2$ 로 표현하여 상삼각행렬이 만들어지는 과정을  문자로 나타내면 아래와 같이 나타낼 수 있다. 또한 각 하삼각행렬의 역행렬을 순서대로 양변에 취해주면 행렬 $A$ 에 관한 행렬식을 만들어낼 수 있다. 
+마찬가지로 가우스 소거법에서 $\enclose{circle}{1}$ 번째 행과  $\enclose{circle}{2}$ 번째 행을 제외한 행의 2열 성분을 모두 0으로 만들기 위해서 계산한 행렬의 $\enclose{circle}{2}$ 번째 행과 $\enclose{circle}{3}$ 번째 행을 더해주었습니다. 이 과정을 행렬 곱으로 나타내면 아래와 같은 행렬식이 나오게 됩니다.
 
 
 $$
-L_2 L_1 A = U \\
-A = L_2^{-1} L_1^{-1} U
+\begin{aligned}
+&\left[\begin{array}{ccc} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 1 & 1 \end{array} \right]
+\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 & 2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
+\\
+\because &\left[\begin{array}{ccc} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 1 & 1 \end{array} \right]
+\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 & 2 \end{array} \right] = \left[\begin{array}{ccc} 2 & 1 & 1 \\ 0 & -8 & -2 \\ 0 & 0 & 1 \end{array} \right]
+\end{aligned}
 $$
 
 
-하삼각 행렬의 역행렬을 구하여 모두 곱한 값 역시 새로운 하삼각행렬이 나오게 된다. 이 하삼각행렬을 $L$ 이라 하면 임의의 정방행렬을 하삼각행렬과 상삼각행렬로 분해할 수 있다. 이를 LU분해법이라고 한다. LU분해법은 한 행렬에 대해 각자 다른 LU분해가 있는 1:1 대응(Unique)이다. 
+전체 과정에서 기존 행렬 $A$ 왼쪽에 새로 만들어진 두 하삼각행렬을 원래의 행렬과 가까운 것부터 $L_1, L_2$ 라고 해보겠습니다. 이제 기호를 사용하면 위 수식에서 $\because$ 이하의 식을 다음과 같이 간단하게 나타낼 수 있습니다.
 
 
 $$
-A = LU
+L_2 L_1 A = U
 $$
 
+
+왼쪽에는 $A$만 남을 수 있도록 $L_2, L_1$의 역행렬을 각각 양변의 왼쪽에 곱해주겠습니다. 그러면 식이 다음과 같이 변하게 됩니다.
+
+
+$$
+\begin{aligned}
+L_1^{-1}L_2^{-1}L_2 L_1 A &= L_1^{-1}L_2^{-1}U \\
+A &= L_1^{-1}L_2^{-1}U
+\end{aligned}
+$$
+
+
+여기서 두 역행렬의 곱 $L_1^{-1}L_2^{-1}$는 항상 하삼각행렬 $L$이 나오게 됩니다. 그렇기 때문에 위 식을 정리하면 $A = LU$ 로 나타낼 수 있으며 이를 LU분해법이라고 합니다. 특정한 행렬 $A$에 대해 LU분해법으로 등장하는 $L, U$ 행렬 쌍은 오직 하나이며 $A$가 달라지면 $L,U$도 각각 달라집니다. 이런 이유에서 특정한 정방행렬 $A$에 대하여 LU분해법은 일대일대응(Unique)이라고 할 수 있습니다.
