--- a/_posts/2020-02-18-LA2.md
+++ b/_posts/2020-02-18-LA2.md
@@ -17,14 +17,14 @@ tag: Linear-Algebra
 
 $$
 \begin{cases}\begin{aligned}
-x + 2y = 3 \qquad \cdots \enclose{circle}{1}\\
-4x + 5y = 6 \qquad\cdots \enclose{circle}{2}
+x + 2y = 3 \qquad \cdots 1\\
+4x + 5y = 6 \qquad\cdots 2
 \end{aligned}\end{cases}
 $$
 
 
 
-위 식에서 $x, y$의 해는 중등 과정에서 배운 가감법과 대입법을 통해서도 구할 수 있습니다. 가감법을 사용하려면 $\enclose{circle}{1} \times 4 - \enclose{circle}{2}$ 를 해주어 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다. 대입법을 사용하려면 식 $\enclose{circle}{1}$ 을 $x = 3-2y$ 처럼 한 문자에 대하여 정리한 뒤에 $\enclose{circle}{2}$ 에 식을 대입하여 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다.
+위 식에서 $x, y$의 해는 중등 과정에서 배운 가감법과 대입법을 통해서도 구할 수 있습니다. 가감법을 사용하려면 식 $1$을 $4$배 해준 뒤 식 $2$를 빼주어 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다. 대입법을 사용하려면 식 식 $1$ 을 $x = 3-2y$ 처럼 한 문자에 대하여 정리한 뒤에 식 $2$ 에 식을 대입하여 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다.
 
 둘 중 어느 방법을 사용하든 이 방법은 $x + 2y = 3$ 과 $4x + 5y = 6$ 의 두 직선의 교점을 구하는 관점에서 풀고 있습니다. 만약 미지수의 개수가 3개로 늘어난다면 평면의 교선을 구하는 관점에서 풀게 되지요. 하지만 선형대수학에서 연립방정식의 풀이를 이런 관점으로 바라보는 것이 좋은 방법은 아닙니다. 이런 관점에서는 미지수와 식의 개수가 늘어날수록 직선, 평면 혹은 그 이상의 초평면이 식의 개수만큼 만나는(Intersect) 공간을 상상해야 합니다. 하지만 사람의 머리로 3차원 이상을 상상하기란 쉬운 일이 아닙니다.
 
@@ -49,7 +49,9 @@ $$
  
 
 $$
-\begin{cases} 2u + v + w = 5 \quad \cdots \enclose{circle}{1}\\ 4u - 6v = -2 \quad \cdots \enclose{circle}{2}\\ -2u + 7v + 2w = 9 \quad \cdots \enclose{circle}{3} \end{cases}
+\begin{align}
+\begin{cases} 2u + v + w &= 5 \qquad \cdots 1\\ 4u - 6v &= -2 \quad \cdots 2\\ -2u + 7v + 2w &= 9 \qquad \cdots 3 \end{cases}
+\end{align}
 $$
 
 
@@ -65,7 +67,7 @@ $$
 
 
 
-가우스 소거법은 가장 왼쪽 행렬을 **상삼각행렬(Uppert triangular matrix, $U$)로** 만드는 과정부터 시작합니다. 상삼각 행렬이란 행렬의 대각 성분(Diagonal elements)을 기준으로 왼쪽 아래 성분이 모두 $0$ 인 행렬입니다. 상삼각행렬을 만드는 방법은 가감법을 사용하여 연립방정식을 푸는 방법과 유사합니다. $\enclose{circle}{1}$ 번째 행에 적절한 수를 곱한 뒤 나머지 각 행과 더하거나 빼주어 각 1열의 성분을 0으로 만듭니다. 위 식에서는 $\enclose{circle}{1}$ 번째 행을 2배 해준 뒤에 $\enclose{circle}{2}$ 번째 행에서 이를 빼줌으로써 1열의 성분을 0으로 만들 수 있습니다. 마찬가지로 $\enclose{circle}{1}$ 번째 행에서 $\enclose{circle}{3}$ 번째 행을 더해주어 3행 1열의 성분도 0으로 만들 수 있습니다. 이 계산을 수행하면 아래와 같은 결과가 나오게 됩니다.
+가우스 소거법은 가장 왼쪽 행렬을 **상삼각행렬(Uppert triangular matrix, $U$)로** 만드는 과정부터 시작합니다. 상삼각 행렬이란 행렬의 대각 성분(Diagonal elements)을 기준으로 왼쪽 아래 성분이 모두 $0$ 인 행렬입니다. 상삼각행렬을 만드는 방법은 가감법을 사용하여 연립방정식을 푸는 방법과 유사합니다. $1$번째 행에 적절한 수를 곱한 뒤 나머지 각 행과 더하거나 빼주어 각 1열의 성분을 0으로 만듭니다. 위 식에서는 $1$ 번째 행을 2배 해준 뒤에 $2$ 번째 행에서 이를 빼줌으로써 1열의 성분을 0으로 만들 수 있습니다. 마찬가지로 $1$ 번째 행에서 $3$ 번째 행을 더해주어 3행 1열의 성분도 0으로 만들 수 있습니다. 이 계산을 수행하면 아래와 같은 결과가 나오게 됩니다.
 
 
 
@@ -75,7 +77,7 @@ $$
 
 
 
-다음에는 $\enclose{circle}{3}$ 번째 행 2열 성분을 0으로 만들어 줄 차례입니다. 위 행렬의 $\enclose{circle}{2}$ 번째 식과 $\enclose{circle}{3}$ 번째 식을 더해주면 아래와 같이 미지수 왼쪽에 있는 행렬을 상삼각행렬로 만들 수 있습니다.
+다음에는 $3$ 번째 행 2열 성분을 0으로 만들어 줄 차례입니다. 위 행렬의 $2$ 번째 식과 $3$ 번째 식을 더해주면 아래와 같이 미지수 왼쪽에 있는 행렬을 상삼각행렬로 만들 수 있습니다.
 
 
 
@@ -85,7 +87,7 @@ $$
 
 
 
-이제는 모든 미지수의 값을 구할 수 있게 되었습니다. 마지막 행으로부터 $w = 2$ 이니 이 값을 $\enclose{circle}{2}$ 번째 행에 대입하여 $u=1$ 을 구하고, 두 값을 $\enclose{circle}{1}$ 번째 행에 대입하여 $u=1$ 을 구하면 됩니다. 이렇게 왼쪽에 있는 행렬을 상삼각행렬로 만드는 과정을 가우스 소거법이라고 합니다. 여기서 대각 성분에 해당하는 $2, -8, 1$을 **피봇(Pivot)**이라고 합니다. 만약 계산하면서 피봇 자리에 $0$이 등장하는 경우에는 그 열의 성분이 $0$이 아닌 다른 행과 바꾸어 다시 소거 계산하면 되는데 이렇게 바꿔주는 과정을 **피봇팅(Pivoting)**이라고 합니다. 예시처럼 모든 피봇이 $0$이 아니면 연립방정식에 특정한 해(Unique solution)이 존재하는 경우에 해당합니다. 반대로 그렇지 않은 연립방정식은 해가 없거나(No solution) 무한한 해(Infinite solution)를 가집니다.
+이제는 모든 미지수의 값을 구할 수 있게 되었습니다. 마지막 행으로부터 $w = 2$ 이니 이 값을 $2$ 번째 행에 대입하여 $u=1$ 을 구하고, 두 값을 $1$ 번째 행에 대입하여 $u=1$ 을 구하면 됩니다. 이렇게 왼쪽에 있는 행렬을 상삼각행렬로 만드는 과정을 가우스 소거법이라고 합니다. 여기서 대각 성분에 해당하는 $2, -8, 1$을 **피봇(Pivot)**이라고 합니다. 만약 계산하면서 피봇 자리에 $0$이 등장하는 경우에는 그 열의 성분이 $0$이 아닌 다른 행과 바꾸어 다시 소거 계산하면 되는데 이렇게 바꿔주는 과정을 **피봇팅(Pivoting)**이라고 합니다. 예시처럼 모든 피봇이 $0$이 아니면 연립방정식에 특정한 해(Unique solution)이 존재하는 경우에 해당합니다. 반대로 그렇지 않은 연립방정식은 해가 없거나(No solution) 무한한 해(Infinite solution)를 가집니다.
 
 ## LU Factorization (Decomposition)
 
@@ -97,7 +99,7 @@ $$
 $$
 
 
-가우스 소거법에서 $\enclose{circle}{1}$ 번째 행을 제외한 행의 1열 성분을 모두 0으로 만들기 위해서 $\enclose{circle}{2}$ 번째 행에서 $\enclose{circle}{1}$ 번째 행을 두 배 해준 것을 빼주었고, $\enclose{circle}{3}$ 번째 행에서는 $\enclose{circle}{1}$ 번째 행과 더해주었습니다. 이 과정을 행렬 곱으로 나타내면 아래와 같은 행렬식이 나오게 됩니다.
+가우스 소거법에서 $\enclose{circle}{1}$ 번째 행을 제외한 행의 1열 성분을 모두 0으로 만들기 위해서 $2$ 번째 행에서 $1$ 번째 행을 두 배 해준 것을 빼주었고, $3$ 번째 행에서는 $1$ 번째 행과 더해주었습니다. 이 과정을 행렬 곱으로 나타내면 아래와 같은 행렬식이 나오게 됩니다.
 
 
 $$
@@ -108,7 +110,7 @@ $$
 $$
 
 
-마찬가지로 가우스 소거법에서 $\enclose{circle}{1}$ 번째 행과  $\enclose{circle}{2}$ 번째 행을 제외한 행의 2열 성분을 모두 0으로 만들기 위해서 계산한 행렬의 $\enclose{circle}{2}$ 번째 행과 $\enclose{circle}{3}$ 번째 행을 더해주었습니다. 이 과정을 행렬 곱으로 나타내면 아래와 같은 행렬식이 나오게 됩니다.
+마찬가지로 가우스 소거법에서 $1$ 번째 행과  $2$ 번째 행을 제외한 행의 2열 성분을 모두 0으로 만들기 위해서 계산한 행렬의 $2$ 번째 행과 $3$ 번째 행을 더해주었습니다. 이 과정을 행렬 곱으로 나타내면 아래와 같은 행렬식이 나오게 됩니다.
 
 
 $$
