--- a/_posts/2020-06-20-nlp_lda.md
+++ b/_posts/2020-06-20-nlp_lda.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 잠재 디리클레 할당 (Latent Dirichlet Assignment)
+title: 잠재 디리클레 할당 (Latent Dirichlet Allocation)
 category: NLP
 tag: NLP
 ---
@@ -11,33 +11,39 @@ tag: NLP
 
 
 
-# 잠재 디리클레 할당 (Latent Dirichlet Assignment)
+# Latent Dirichlet Allocation
 
-**잠재 디리클레 할당(Latent Dirichlet Assignment, LDA)** 는 토픽 모델링을 위해 가장 널리 사용되는 기법이다. 잠재 디리클레 할당은 하나의 문서는 여러 개의 주제가 혼합된 형태로 이루어져 있다는 것을 전제로 한다. 조금 더 자세히 말하면 각 주제에 해당하는 단어들이 있고 문서는 단어를 뽑을 때 특정 주제에 해당하는 단어를 반복해서 뽑는 식으로 써진다는 것이다.(실제로 사람이 문서를 작성하는 방법과는 다르다) 이를 역으로 추적한다면 각각의 문서에 몇 개의 주제가 섞여 있는지와 그 주제가 얼마만큼의 비중으로 섞여 있는지를 알아낼 수 있다는 것이 잠재 디리클레 할당이 가정하고 있는 바이다.
+**잠재 디리클레 할당(Latent Dirichlet Allocation, LDA)**는 토픽 모델링(Topic modeling)을 위해 가장 널리 사용되는 기법입니다. 잠재 디리클레 할당은 다음과 같은 아이디어로부터 출발하였습니다.
+
+> *"하나의 문서에는 여러 여러 개의 주제가 혼합되어 있다. 기본적으로 이 주제에 해당하는 단어들이 있고, 문서는 특정 주제에 해당하는 단어를 반복해서 뽑으면서 작성된다."*
+
+잠재 디리클레 할당에서는 글의 흐름대로 단어를 선택하지 않고 특정 주제에 해당하는 단어를 확률적으로 반복해서 뽑는데 이는 사람이 문서를 작성하는 방법과 꽤 많이 다르다고 볼 수도 있습니다. 아무튼 잠재 디리클레 할당은 이런 가정에서부터 출발하여 특정 주제의 단어가 그 문서에 얼마나 들어 있는지를 파악합니다. 이로부터 문서가 몇 개의 주제로 이루어져 있으며, 각 주제는 얼마만큼의 비중으로 섞여 있는 지를 알 수 있습니다.
 
 <p align="center"><img src="https://user-images.githubusercontent.com/45377884/84987583-631a8e80-b17b-11ea-870c-01d5d71b5ab9.png" alt="lda_generation" style="zoom:80%;" /></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://github.com/pilsung-kang/text-analytics">Text-Analytics Github</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://github.com/pilsung-kang/text-analytics">github.com/pilsung-kang</a></p>
 
-잠재 디리클레 할당에서 가정하고 있는 세 가지를 다시 살펴보자. 첫 번째는 각각의 주제는 ***'단어의 분포로 이루어져 있다'*** 는 것이다. 두 번째는 ***'각 문서가 Corpus-wide한 주제의 혼합으로 이루어져 있다'*** 는 것이다. 즉 말뭉치 전체에 걸쳐있는 주제가 혼합되어 하나의 문서에 있다는 것을 전제로 한다. 동일한 문서 집합에서 추출한 개별 문서가 가지고 있는 주제의 비중은 변하지 않을 것임을 가정한다. 마지막으로 ***'각각의 단어들은 자신이 속해 있는 하나의 주제로부터 샘플링되어 생성된다'*** 는 것이다. 이것이 문서의 생성 과정에서 잠재 디리클레 할당이 가정하고 있는 것들이다.
+하지만 표면적으로 알 수 있는 것은 각각의 단어와 문서 뿐입니다. 그렇기 때문에 우리는 잠재 디리클레 할당을 통해 다음의 3가지를 알아내려 합니다. 
 
-하지만 우리가 알 수 있는 것은 각각의 단어, 그리고 각각의 문서 뿐이다. 특정 주제에 해당하는 단어 분포가 어떻게 되는지는 알 수 없으며, 문서마다 주제의 비중이 어떻게 구성되어 있는지도 알 수 없다. 그리고 각각의 위치, 즉 첫 번째 혹은 두 번째 단어를 어디서 뽑아와서 배치해야 되는 지도 알지 못한다. 때문에 우리가 알아야 하는 것은 이 세 가지로 추려볼 수 있다. 첫 번째, **어떤 단어가 각각의 주제에 분포하고 있는가?** 두 번째, **각 문서마다 주제의 비중은 어떻게 이루어져 있는가?** 세 번째, **문서의 각 위치에 해당하는 단어가 어느 토픽으로부터 추출이 되었는가?** 우리는 이 세 가지 질문에 대한 답을 알지 못하므로 일련의 과정, 즉 숨겨진(잠재된) 변수를 추론하는 과정을 통해서 이 세 질문에 대한 답을 찾아나가야 한다.
+> 1. 각 주제를 구성하고 있는 단어는 어떤 것인지?
+> 2. 각 문서를 구성하는 주제의 비중은 어떻게 되는지?
+> 3. 문서의 각 위치에 해당하는 단어는 어느 토픽으로부터 추출이 된 것인지?
 
 
 
-## LDA의 Graphical Notation
+## Graphical Notation
 
-다음의 그래프 표현(Graphical Notation)을 통해서 잠재 디리클레 할당이 각각의 답을 찾아가는 과정에 대해서 알아보자.
+다음의 그래프 표현(Graphical Notation)은 잠재 디리클레 할당이 세 문제에 대한 답을 찾는 과정을 나타내고 있습니다.
 
 
 
 <p align="center"><img src="https://user-images.githubusercontent.com/45377884/84988849-ad047400-b17d-11ea-8469-dbaff843f44d.png" alt="lda_graph_note" style="zoom: 67%;" /></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://github.com/pilsung-kang/text-analytics">Text-Analytics Github</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://github.com/pilsung-kang/text-analytics">github.com/pilsung-kang</a></p>
 
+위 그래프 표현에서 사각형은 각 화살표 단계를 반복함을 나타냅니다. $D, N, K$는 각각 문서, 단어, 주제를 타나냅니다. 파라미터를 나타내고 있는 각 노드를 자세히 보도록 하겠습니다. $\phi_k$는 각 주제에 대한 단어의 분포를 나타내며 $\theta_d$는 각 문서마다 어떤 비중으로 섞여있는 지를 나타냅니다. $z$ 는 $d$ 번째 문서에서 $n$ 번째에 등장하는 단어 $w_{d,n}$이 어떤 주제로부터 추출된 것인가를 나타내는 파라미터입니다.
 
-
-전체적인 과정은 다음의 세 단계로 이루어진다. 먼저 위에서 이야기 했던 가정을 인코딩하고 결합 확률 분포로 이루어진 확률을 각각 Factorization한다. 그리고 이를 알고리즘으로 연결한다. 위 그래프 표현에서 사각형은 단계별 반복을 나타내며 $D$ 는 문서, $N$ 은 단어, $K$ 는 주제를 나타낸다. 각 노드는 랜덤 변수를 나타내고 있으며 $\alpha, \beta$ 는 하이퍼파라미터로 사용자가 조작해야 하는 값이다. $\phi_k$ 는 각 **주제에 대한 단어의 분포** 를 나타낸다. $\theta_d$ 는 각 **문서마다 어떤 주제가 어떤 비중으로 섞여있는지**를 나타내는 값이다. $z_{d,n}$ 는 $d$ 번째 문서에서 $n$ 번째에 등장하는 **단어는 어떤 주제로부터 추출된 것인가** 에 대한 답이다.
+양쪽 화살표의 출발이 되는 $\alpha, \beta$는 하이퍼파라미터입니다. 왼쪽에서 시작하는 $\alpha$를 보도록 하겠습니다.
 
 각 노드에서 뻗어나가는 엣지는 의존성을 나타낸다. 먼저 가장 왼쪽의 엣지부터 살펴보자. 가장 왼쪽의 엣지는 디리클레 분포를 따르는 $\alpha$ 로부터 $\theta_d$ , 즉 문서마다 있는 주제의 비중을 할당하게 된다. 이로부터 다시 $z_{d,n}$ 으로 나타나는 문서에 등장하는 단어들이 어느 주제로부터 추출된 것인지를 계산해낸다.
 
@@ -281,15 +287,7 @@ $$
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://github.com/pilsung-kang/text-analytics">Text-Analytics Github</a></p>
 
-## 잠재 디리클레 할당 모델 평가하기
 
-이렇게 생성한 잠재 디리클레 할당 모델을 어떻게 평가할 것인가? 절대적인 평가 기준은 없지만 어느 정도 가늠할 수 있는 수치는 존재한다. 가장 많이 사용되는 것은 Perplexity이다. Perplexity의 식은 아래와 같이 나타나게 된다.
-
-
-$$
-\text{Perplexity(w)} = \exp \{ -\frac{\log(p(w))}{\sum^D_{d=1}\sum^V_{j=1}n^{(jd)}}\} \\
-\log(p(w)) = \sum^D_{d=1}\sum^V_{j=1}n^{(jd)} \log[\sum^K_{k=1}\theta_K^d\beta_K^j]
-$$
 
 
 
