--- a/_posts/2020-09-06-fs_be.md
+++ b/_posts/2020-09-06-fs_be.md
@@ -31,7 +31,7 @@ $$
 
 
 
-<img src="https://user-images.githubusercontent.com/45377884/92316353-aaebdc00-f02d-11ea-8062-35502164c93a.png" alt="es" style="zoom:50%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/92316353-aaebdc00-f02d-11ea-8062-35502164c93a.png" alt="es" style="zoom:50%;" /></p>
 
 
 
@@ -41,13 +41,13 @@ $$
 
 
 
-<img src="https://user-images.githubusercontent.com/45377884/92316355-acb59f80-f02d-11ea-908a-8b9f335676d4.png" alt="fsbe" style="zoom:50%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/92316355-acb59f80-f02d-11ea-908a-8b9f335676d4.png" alt="fsbe" style="zoom:50%;" /></p>
 
 ### Forward Selection
 
 **전진 선택(Forward selection)**은 *가장 유의미한 특성을 선택해나가는 방식* 입니다. 아무런 특성이 없는 상태부터 시작해서 특성을 늘려나가는 방향(Forward)으로 나아갑니다. 매 단계마다 가장 성능이 좋은 특성을 선택한 뒤에 유의미한 성능이 없을 때까지 이 과정을 실행해 나갑니다. 아래는 전진 선택의 과정을 나타낸 이미지입니다.
 
-<img src="https://quantifyinghealth.com/wp-content/uploads/2019/10/forward-stepwise-algorithm.png" alt="forwardselection" style="zoom: 80%;" />
+<p align="center"><img src="https://quantifyinghealth.com/wp-content/uploads/2019/10/forward-stepwise-algorithm.png" alt="forwardselection" style="zoom: 80%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://quantifyinghealth.com/stepwise-selection/">quantifyinghealth.com</a></p>
 
@@ -96,7 +96,7 @@ $x_1,x_2,x_5$중에서 어떤 특성을 추가하더라도 대조군인 $\hat{y}
 
 **후진 제거(Backward elimination)**는 *무의미한 특성을 제거해나가는 방식* 입니다. 반대로 모든 특성을 가진 모델에서 시작하여 특성을 하나씩 줄여나가는 방향(Backward)으로 나아갑니다. 특성을 제거했을 때 가장 성능이 좋은 모델을 선택함며 유의미한 성능 저하가 나타날 때까지 이 과정을 반복합니다. 아래는 후진 제거의 과정을 나타낸 이미지입니다.
 
-<img src="https://quantifyinghealth.com/wp-content/uploads/2019/10/backward-stepwise-algorithm.png" alt="backward_elim" style="zoom: 80%;" />
+<p align="center"><img src="https://quantifyinghealth.com/wp-content/uploads/2019/10/backward-stepwise-algorithm.png" alt="backward_elim" style="zoom: 80%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://quantifyinghealth.com/stepwise-selection/">quantifyinghealth.com</a></p>
 
@@ -150,7 +150,7 @@ $x_4$특성을 제거한 모델이 가장 높은 성능을 보였지만, 이 모
 
 
 
-<img src="https://user-images.githubusercontent.com/45377884/92316357-af17f980-f02d-11ea-97fa-132811c3eead.png" alt="stepwise" style="zoom:50%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/92316357-af17f980-f02d-11ea-97fa-132811c3eead.png" alt="stepwise" style="zoom:50%;" /></p>
 
 전진 선택과 후진 제거를 단계별로(Stepwise) 반복하여 적용할 뿐 특별히 다른 방식을 적용하지는 않습니다. 5개의 특성을 가지고 있는 데이터셋에 Stepwise selection을 적용하여 특성 선택을 진행해보겠습니다. 먼저 전진 선택을 적용합니다.
 
